# xsupplicant

./: .gitignore  AUTHORS  LICENSE  README.md
xsupplicant/: AUTHORS  ChangeLog  Makefile.am  README  TODO  autoregen.sh  clean_tree.sh  configure.ac  gen_version.sh
xsupplicant/doc/: Doxyfile.in  Doxyfile.win  Makefile.am  README.certificates  README.direct_radius  README.wpa  XSupplicant Compile Guide - Win32.odt  Xsupplicant-wireless-cards.html  extending_the_xsupplicant_configuration_file.rtf  extending_the_xsupplicant_plugin_architecture.rtf  xsupplicant_eap_method_development.odt  xsupplicant_mac_os_x_with_eap_fast_how_to
xsupplicant/doc/standards/: draft-arkko-pppext-eap-aka-14.txt  draft-arkko-pppext-eap-aka-15.txt  draft-cam-winget-eap-fast-03.txt  draft-cam-winget-eap-fast-provisioning-02.txt  draft-funk-eap-ttls-v1-01.txt  draft-haverinen-pppext-eap-sim-05.txt  draft-ietf-pppext-eap-ttls-05.txt  draft-josefsson-pppext-eap-tls-eap-05.txt  draft-kamath-pppext-peapv0-00.txt
xsupplicant/etc/: Makefile.am  md5-example.conf  peap-example.conf  tls-example.conf  ttls-example.conf  wpa-psk-example.conf
xsupplicant/lib/: Makefile.am
xsupplicant/lib/libcrashdump/: Makefile.am  crash_handler.c  crash_handler.h  crashdump.c  crashdump.h  crypt.h  ioapi.c  ioapi.h  iowin32.c  iowin32.h  lin_crash_handler.c  mztools.c  mztools.h  sigsegv.c  sigsegv.h  unzip.c  unzip.h  zip.c  zip.h
xsupplicant/lib/libdarwinwireless/: README.thislib
xsupplicant/lib/liblist/: Makefile.am  liblist.c  liblist.h  queue.c  queue.h
xsupplicant/lib/libsupdetect/: Makefile.am  darwin_calls.c  darwin_calls.h  linux_calls.c  linux_calls.h  supdetect.c  supdetect.h  supdetect_private.h  windows_calls.c  windows_calls.h
xsupplicant/lib/libxsupconfcheck/: Makefile.am  xsupconfcheck.c  xsupconfcheck.h  xsupconfcheck_common.c  xsupconfcheck_common.h  xsupconfcheck_conn.c  xsupconfcheck_conn.h  xsupconfcheck_int.c  xsupconfcheck_int.h  xsupconfcheck_profile.c  xsupconfcheck_profile.h  xsupconfcheck_ts.c  xsupconfcheck_ts.h
xsupplicant/lib/libxsupconfig/: Makefile.am  config_grammar.y  config_lexicon.l  lin_crypt.c  pwd_crypt.h  win_crypt.c  xsupconfig.c  xsupconfig.h  xsupconfig_common.c  xsupconfig_common.h  xsupconfig_defaults.c  xsupconfig_defaults.h  xsupconfig_devices.c  xsupconfig_devices.h  xsupconfig_parse.c  xsupconfig_parse.h  xsupconfig_parse_conn_association.c  xsupconfig_parse_conn_association.h  xsupconfig_parse_conn_ip.c  xsupconfig_parse_conn_ip.h  xsupconfig_parse_connection.c  xsupconfig_parse_connection.h  xsupconfig_parse_connections.c  xsupconfig_parse_connections.h  xsupconfig_parse_devices.c  xsupconfig_parse_devices.h  xsupconfig_parse_eap.c  xsupconfig_parse_eap.h  xsupconfig_parse_eap_aka.c  xsupconfig_parse_eap_aka.h  xsupconfig_parse_eap_fast.c  xsupconfig_parse_eap_fast.h  xsupconfig_parse_eap_fast_phase2.c  xsupconfig_parse_eap_fast_phase2.h  xsupconfig_parse_eap_gtc.c  xsupconfig_parse_eap_gtc.h  xsupconfig_parse_eap_md5.c  xsupconfig_parse_eap_md5.h  xsupconfig_parse_eap_mschapv2.c  xsupconfig_parse_eap_mschapv2.h  (+52 more)
xsupplicant/lib/libxsupconfwrite/: Makefile.am  xsupconfigwrite_managed_networks.c  xsupconfwrite.c  xsupconfwrite.h  xsupconfwrite_common.c  xsupconfwrite_common.h  xsupconfwrite_connection.c  xsupconfwrite_connection.h  xsupconfwrite_connections.c  xsupconfwrite_connections.h  xsupconfwrite_devices.c  xsupconfwrite_devices.h  xsupconfwrite_eap.c  xsupconfwrite_eap.h  xsupconfwrite_eap_aka.c  xsupconfwrite_eap_aka.h  xsupconfwrite_eap_fast.c  xsupconfwrite_eap_fast.h  xsupconfwrite_eap_mschapv2.c  xsupconfwrite_eap_mschapv2.h  xsupconfwrite_eap_peap.c  xsupconfwrite_eap_peap.h  xsupconfwrite_eap_sim.c  xsupconfwrite_eap_sim.h  xsupconfwrite_eap_tls.c  xsupconfwrite_eap_tls.h  xsupconfwrite_eap_tnc.c  xsupconfwrite_eap_tnc.h  xsupconfwrite_eap_ttls.c  xsupconfwrite_eap_ttls.h  xsupconfwrite_globals.c  xsupconfwrite_globals.h  xsupconfwrite_interface.c  xsupconfwrite_interface.h  xsupconfwrite_managed_networks.c  xsupconfwrite_managed_networks.h  xsupconfwrite_plugins.c  xsupconfwrite_plugins.h  xsupconfwrite_profiles.c  xsupconfwrite_profiles.h  (+6 more)
xsupplicant/lib/libxsupgui/: Makefile.am  ipc_events_errors.h  win_impersonate_stub.c  xsup_gui_trace.c  xsup_gui_trace.h  xsupgui.c  xsupgui.h  xsupgui_events.c  xsupgui_events.h  xsupgui_events_state.c  xsupgui_events_state.h  xsupgui_mac_utils.c  xsupgui_mac_utils.h  xsupgui_request.c  xsupgui_request.h  xsupgui_request2.c  xsupgui_request3.c  xsupgui_request4.c  xsupgui_request5.c  xsupgui_request6.c  xsupgui_request7.c  xsupgui_ud.c  xsupgui_ud.h  xsupgui_windows.c  xsupgui_windows.h  xsupgui_xml_common.c  xsupgui_xml_common.h
xsupplicant/lib/libxsupplugins/: xsupplugin_logging_type.h  xsupplugin_sim_interface_type.h  xsupplugin_types.h
xsupplicant/plugins/: Makefile.am  birddog.c  plugin_includes.h
xsupplicant/plugins/1XGina/: 1XGina.sln
xsupplicant/src/: .cvsignore  Makefile.am  backend_sm.c  backend_sm.h  buildnum.h  config_ssid.c  config_ssid.h  context.c  context.h  eap_sm.c  eap_sm.h  eapol.c  eapol.h  eapol_key_type1.c  eapol_key_type1.h  eapol_key_type2.c  eapol_key_type2.h  eapol_key_type254.c  eapol_key_type254.h  error_prequeue.c  error_prequeue.h  event_core.c  event_core.h  event_core_win.c  event_core_win.h  frame_structs.h  getopts.c  getopts.h  hmac.h  interfaces.c  interfaces.h  ipaddr_common.c  ipaddr_common.h  ipc_callout.c  ipc_callout.h  ipc_callout_helper.c  ipc_callout_helper.h  ipc_events.c  ipc_events.h  ipc_events_catalog.h  (+43 more)
xsupplicant/tools/: Makefile.am  ifdown  ifup  pkcs12toDERandPEM.sh  testusercert.pfx  updatedir  xml-config-converter.pl  xsup-suppressions
xsupplicant/vs2005/: README.VisualC++Express  Xsupplicant.sln  config_parser.sln
xsupplicant/vs2019/: README.VisualC  Xsupplicant.sln
xsupplicant_plugin_installer/: configure.ac  xsupplicant_plugin_installer.sln
xsupplicant_plugin_installer/src/: Makefile.am  getopts.c  getopts.h  main.c
xsupplicant_plugin_installer/xsupplicant_plugin_installer/: xsupplicant_plugin_installer.vcproj
(+542 files in other folders)
