SUBDIRS = lib src etc tools doc plugins

all-docs:
	cd doc && $(MAKE) $(AM_MAKEFLAGS) all-docs

userguide:
	cd doc && $(MAKE) $(AM_MAKEFLAGS) userguide

refman:
	cd doc && $(MAKE) $(AM_MAKEFLAGS) refman

all-docs:
	cd doc && $(MAKE) $(AM_MAKEFLAGS) all-docs

userguide:
	cd doc && $(MAKE) $(AM_MAKEFLAGS) userguide

refman:
	cd doc && $(MAKE) $(AM_MAKEFLAGS) refman

