include_HEADERS		   = xsupconfcheck.h
lib_LIBRARIES		   = libxsupconfcheck.a
libxsupconfcheck_a_SOURCES = xsupconfcheck.h xsupconfcheck_common.h \
			     xsupconfcheck_conn.h xsupconfcheck_int.h \
			     xsupconfcheck_profile.h xsupconfcheck_ts.h \
			     \
			     xsupconfcheck.c xsupconfcheck_common.c \
			     xsupconfcheck_conn.c xsupconfcheck_int.c \
			     xsupconfcheck_profile.c xsupconfcheck_ts.c
